--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -1,10 +1,10 @@
 section.nl-section.nl-players.nl-create-team
-    div.container.container-wider
+    div.container-fluid
         div.row
             div.col-md-12
                 h1 CREATE TEAM
         div.row
-            div.col-md-12.col-lg-8.nl-team-m600
+            div.col-md-12.col-lg-7.col-xl-7
                 div.nl-players-table.nl-create-team-table
                     div.nl-players-table-data-field
                         div.nl-data--avatar.hidden-sm-down
@@ -73,7 +73,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -127,7 +127,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -180,7 +180,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -233,7 +233,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -286,7 +286,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -339,7 +339,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -392,7 +392,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -445,7 +445,7 @@ section.nl-section.nl-players.nl-create-team
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
                                                             p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
+                                                                button.btn.btn-primary.btn-sm Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -504,11 +504,11 @@ section.nl-section.nl-players.nl-create-team
                                         tbody
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td G
+                                                td K
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -516,11 +516,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DL
+                                                td QB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -528,11 +528,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DR
+                                                td RB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -540,11 +540,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DAL
+                                                td WR
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -552,11 +552,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DAR
+                                                td FLEX
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -564,11 +564,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td CM
+                                                td TE
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -576,11 +576,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td RWM
+                                                td RB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -588,11 +588,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td LWM
+                                                td QB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -600,11 +600,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td RS
+                                                td WR
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -612,11 +612,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td LS
+                                                td FLEX
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -624,11 +624,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td ST
+                                                td K
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -648,7 +648,7 @@ section.nl-section.nl-players.nl-create-team
 
 
 
-            div.col-lg-4.nl-team-600
+            div.col-md-12.col-lg-5.col-xl-5
                 div.nl-team-info
                     div.nl-team-name your team
                     div.nl-team-data
@@ -672,9 +672,6 @@ section.nl-section.nl-players.nl-create-team
                     button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
                     button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
                 div.nl-team-field.football
-                    div.striker-line
-                    div.midfielder-line
-                    div.defender-line
                     div.player-main-block.football
                         div.nl-player-block.nl-FLEX-position(data-position="FLEX")
                             img(src="assets/img/football/FLEX.png" alt="FLEX")
