--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -12,23 +12,35 @@
 .nl-create-team-table {
 
   .nl-players-search {
-    min-width: calculateRem(300px);
+    min-width: 9.75rem;
+    max-width: 10rem;
 
     @include respond-to(tablets) {
       position: absolute;
       top: 2rem;
       right: 1.5rem;
     }
+  }
 
-    @media (min-width: 1441px) and (max-width:2000px) {
-      position: absolute;
-      top: 2rem;
-      right: 1.5rem;
-    }
+  @media (min-width: 992px) and (max-width:1425px) {
+     .table-striped tbody tr td.avatar img {
+        display: none;
+     }
+  }
+
+  @media (min-width: 1441px) and (max-width:2000px) {
+    position: absolute;
+    //top: 2rem;
+    right: 1.5rem;
   }
 
   td, th {
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0.25rem;
+    font-size: 12px;
+
+    @media (max-width:1200px) {
+      font-size: 11px;
+    }
 
     &:first-child {
       text-align: center;
@@ -40,6 +52,10 @@
 
       }
     }
+  }
+
+  .table thead th {
+    font-size: 12px;
   }
 
   td:not(:first-child), .table th:not(:first-child) {
@@ -54,7 +70,7 @@
       //width: 10% !important;
       &:nth-child(1) {
         width: 8%;
-        min-width: 90px;
+        min-width: 65px;
       }
       &:nth-child(2) {
         width: 24%;
@@ -142,204 +158,242 @@
   }
 }
 
-.nl-team-field {
-  background: url(../img/nl-soccer-field.png) no-repeat 0 0;
-  background-size: contain;
-  min-width: 100%;
-  min-height: 573px;
-  background-size: 100% 100%;
+.nl-create-team {
 
-  &.soccer {
-    .nl-player-block{
-      img{
-        max-width: 69px;
-         @include respond-to(wide-tablets){
-          max-width: 51px;
-        }
-      }
-    }
-  }
+  .player-main-block {
 
-  &.football{
-    background: url(../img/football/nl-football-field.png) no-repeat 0 0;
-    background-size: contain;
-    min-height: 420px;
-    background-size: 100% 100%;
-    .nl-player-block{
-      img{
-        max-width: 115px;
-         @include respond-to(wide-tablets){
-          max-width: 90px;
-        }
-      }
-    }
-  }
-  @include respond-to(allsmall){
-    display: none;
-  }
-  .goalkeeper-line {
+    width: 100%;
+    height: 100%;
+    min-height: 563px;
     position: relative;
-  }
-  .nl-player-block {
-    position: absolute;
-    max-width: 105px;
-    text-align: center;
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: 600;
-    p{
-      margin: 0;
-      line-height: 15px
-    }
-    img {
-      max-width: 60px;
-    }
-    &--data{
-      background: #253046;
-      position: relative;
-      min-width: 95px;
-      padding: 2px;
-      .btn-player-close{
-        position: absolute;
-        top: -16px;
-        right: -10px;
-        background: red;
-        color: #fff;
-      }
-      .data{
-        display: flex;
-        justify-content: space-between;
-        span:first-child{
-          color: #df920b;
-        }
-      }
+
+    .nl-G-position{
+      bottom: 6.5%;
+      left: 43%;
     }
 
-  }
-}
-
-.player-main-block{
-  width: 100%;
-  height: 100%;
-  min-height: 563px;
-  position: relative;
-  .nl-G-position{
-    bottom: 6.5%;
-    left: 43%;
-  }
-
-  .nl-DL-position{
-    bottom: 21.5%;
-    left: 24%;
-  }
-  .nl-DR-position{
-    bottom: 21.5%;
-    right: 24%;
-  }
-  .nl-DAL-position{
-    bottom: 35%;
-    left: 7%;
-  }
-  .nl-DAR-position{
-    bottom: 35%;
-    right: 6%;
-  }
-  .nl-CM-position{
-    bottom: 43%;
-    left: 40%;
-  }
-
-  .nl-ST-position{
-    top: 2.5%;
-    left: 40%;
-  }
-
-  .nl-LS-position{
-    top: 2.5%;
-    left: 17%;
-  }
-
-  .nl-RS-position{
-    top: 2.5%;
-    right: 17%;
-  }
-
-  .nl-LWM-position{
-    top: 25%;
-    left: 17%;
-  }
-
-  .nl-RWM-position{
-    top: 25%;
-    right: 17%;
-  }
-  
-
-  @media (min-width: 1200px)  {
+    .nl-DL-position{
+      bottom: 21.5%;
+      left: 24%;
+    }
+    .nl-DR-position{
+      bottom: 21.5%;
+      right: 24%;
+    }
+    .nl-DAL-position{
+      bottom: 35%;
+      left: 7%;
+    }
+    .nl-DAR-position{
+      bottom: 35%;
+      right: 6%;
+    }
     .nl-CM-position{
       bottom: 43%;
-      left: 43%;
+      left: 40%;
     }
-    .nl-LWM-position{
-      top: 25%;
-      left: 25%;
-    }
-    .nl-RWM-position{
-      top: 25%;
-      right: 25%;
-    }
+
     .nl-ST-position{
       top: 2.5%;
-      left: 43%;
+      left: 40%;
     }
-  }
 
-  &.football{
-    min-height: 511px;
-    margin-top: 80px;
-    margin-bottom: 30px;
-    .nl-FLEX-position{
-      bottom: 8.8%;
-      right: 7%;
+    .nl-LS-position{
+      top: 2.5%;
+      left: 17%;
     }
-    .nl-K-position{
-      bottom: 20%;
-      left: 43%;
+
+    .nl-RS-position{
+      top: 2.5%;
+      right: 17%;
     }
-    .nl-LRB-position{
-      bottom: 46%;
-      left: 23.5%;
+
+    .nl-LWM-position{
+      top: 25%;
+      left: 17%;
     }
-    .nl-RRB-position{
-      bottom: 41%;
-      right: 19.5%;
+
+    .nl-RWM-position{
+      top: 25%;
+      right: 17%;
+    }  
+
+    @media (min-width: 1200px)  {
+      .nl-CM-position{
+        bottom: 43%;
+        left: 43%;
+      }
+      .nl-LWM-position{
+        top: 25%;
+        left: 25%;
+      }
+      .nl-RWM-position{
+        top: 25%;
+        right: 25%;
+      }
+      .nl-ST-position{
+        top: 2.5%;
+        left: 43%;
+      }
     }
-    .nl-QB-position{
-      top: 15%;
-      left: 43%;
-    }
-    .nl-LWR-position{
-      top: -1%;
-      left: 18%;
-    }
-    .nl-RWR-position{
-      top: 5%;
-      right: 15%;
-    }
-    .nl-TE-position{
-      top: -11%;
-      right: 34%;
-    }
-    .nl-team-logo-position{
-      bottom: 8.8%;
-      left: 13%;
-      img{
-        max-width: inherit;
+
+    &.football{
+      min-height: 511px;
+
+      @media (min-width: 1200px) and (max-width:1425px) {
+        min-height: 465px;
+        max-height: 465px;
+      }
+
+      margin-top: 80px;
+      margin-bottom: 30px;
+      .nl-FLEX-position{
+        bottom: 8.8%;
+        right: 7%;
+      }
+      .nl-K-position{
+        bottom: 20%;
+        left: 43%;
+      }
+      .nl-LRB-position{
+        bottom: 46%;
+        left: 23.5%;
+      }
+      .nl-RRB-position{
+        bottom: 41%;
+        right: 19.5%;
+      }
+      .nl-QB-position{
+        top: 15%;
+        left: 43%;
+      }
+      .nl-LWR-position{
+        top: -1%;
+        left: 18%;
+      }
+      .nl-RWR-position{
+        top: 5%;
+        right: 15%;
+      }
+      .nl-TE-position{
+        top: -11%;
+        right: 34%;
+      }
+      .nl-team-logo-position{
+        bottom: 8.8%;
+        left: 13%;
+        img{
+          max-width: inherit;
+        }
       }
     }
   }
+
+    .nl-team-field {
+      background: url(../img/nl-soccer-field.png) no-repeat 0 0;
+      background-size: contain;
+      min-width: 100%;
+      background-size: 100% 100%;
+
+    @include respond-to(wide-tablets){
+      .player-main-block {
+        min-height: 373px;
+      }
+      .football {
+
+        .nl-RRB-position{
+          bottom: 41%;
+          right: 13.5%;
+        }
+
+          .nl-LRB-position{
+          bottom: 46%;
+          left: 18.5%;
+        }
+
+        .nl-QB-position {
+          top: 20%;
+        }
+      }
+    }
+
+    &.soccer {
+      .nl-player-block{
+        img{
+          max-width: 69px;
+           @include respond-to(wide-tablets){
+            max-width: 51px;
+          }
+        }
+      }
+    }
+
+    &.football{
+      background: url(../img/football/nl-football-field.png) no-repeat 0 0;
+      background-size: contain;
+      //min-height: 420px;
+      background-size: 100% 100%;
+
+      .nl-player-block{
+        img{
+          max-width: 115px;
+          @include respond-to(wide-tablets){
+            max-width: 81px;
+          }
+          @include respond-to(medium-display){
+            max-width: 95px;
+          }
+        }
+      }
+    }
+    @include respond-to(allsmall){
+      display: none;
+    }
+    .goalkeeper-line {
+      position: relative;
+    }
+    .nl-player-block {
+      position: absolute;
+      max-width: 105px;
+      text-align: center;
+      font-size: 10px;
+      text-transform: uppercase;
+      color: #fff;
+      font-weight: 600;
+      p{
+        margin: 0;
+        line-height: 15px
+      }
+      img {
+        max-width: 60px;
+      }
+      &--data{
+        background: #253046;
+        position: relative;
+        min-width: 85px;
+        padding: 2px;
+        .btn-player-close{
+          position: absolute;
+          top: -16px;
+          right: -10px;
+          background: red;
+          color: #fff;
+        }
+        .data{
+          display: flex;
+          justify-content: space-between;
+          span:first-child{
+            color: #df920b;
+          }
+        }
+      }
+
+    }
+  }
+
 }
+
+
 
 .nl-team-list{
   max-width: calculateRem(500px);
