--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -1,5 +1,212 @@
 .nl-enter-contests {
 
+  .player-main-block{
+  width: 100%;
+  height: 100%;
+  min-height: 563px;
+  position: relative;
+  .nl-G-position{
+    bottom: 6.5%;
+    left: 43%;
+  }
+
+  .nl-DL-position{
+    bottom: 21.5%;
+    left: 24%;
+  }
+  .nl-DR-position{
+    bottom: 21.5%;
+    right: 24%;
+  }
+  .nl-DAL-position{
+    bottom: 35%;
+    left: 7%;
+  }
+  .nl-DAR-position{
+    bottom: 35%;
+    right: 6%;
+  }
+  .nl-CM-position{
+    bottom: 43%;
+    left: 40%;
+  }
+
+  .nl-ST-position{
+    top: 2.5%;
+    left: 40%;
+  }
+
+  .nl-LS-position{
+    top: 2.5%;
+    left: 17%;
+  }
+
+  .nl-RS-position{
+    top: 2.5%;
+    right: 17%;
+  }
+
+  .nl-LWM-position{
+    top: 25%;
+    left: 17%;
+  }
+
+  .nl-RWM-position{
+    top: 25%;
+    right: 17%;
+  }  
+
+  @media (min-width: 1200px)  {
+    .nl-CM-position{
+      bottom: 43%;
+      left: 43%;
+    }
+    .nl-LWM-position{
+      top: 25%;
+      left: 25%;
+    }
+    .nl-RWM-position{
+      top: 25%;
+      right: 25%;
+    }
+    .nl-ST-position{
+      top: 2.5%;
+      left: 43%;
+    }
+  }
+
+  &.football{
+    min-height: 511px;
+    margin-top: 80px;
+    margin-bottom: 30px;
+    .nl-FLEX-position{
+      bottom: 8.8%;
+      right: 7%;
+    }
+    .nl-K-position{
+      bottom: 20%;
+      left: 43%;
+    }
+    .nl-LRB-position{
+      bottom: 46%;
+      left: 23.5%;
+    }
+    .nl-RRB-position{
+      bottom: 41%;
+      right: 19.5%;
+    }
+    .nl-QB-position{
+      top: 15%;
+      left: 43%;
+    }
+    .nl-LWR-position{
+      top: -1%;
+      left: 18%;
+    }
+    .nl-RWR-position{
+      top: 5%;
+      right: 15%;
+    }
+    .nl-TE-position{
+      top: -11%;
+      right: 34%;
+    }
+    .nl-team-logo-position{
+      bottom: 8.8%;
+      left: 13%;
+      img{
+        max-width: inherit;
+      }
+    }
+  }
+}
+  
+  .nl-team-field {
+      background: url(../img/nl-soccer-field.png) no-repeat 0 0;
+      background-size: contain;
+      min-width: 100%;
+      background-size: 100% 100%;
+
+    @include respond-to(wide-tablets){
+      .player-main-block {
+        min-height: 385px;
+      }
+    }
+
+    &.soccer {
+      .nl-player-block{
+        img{
+          max-width: 69px;
+           @include respond-to(wide-tablets){
+            max-width: 51px;
+          }
+        }
+      }
+    }
+
+    &.football{
+      background: url(../img/football/nl-football-field.png) no-repeat 0 0;
+      background-size: contain;
+      //min-height: 420px;
+      background-size: 100% 100%;
+      .nl-player-block{
+        img{
+          max-width: 115px;
+           @include respond-to(wide-tablets){
+            max-width: 81px;
+          }
+        }
+      }
+    }
+    @include respond-to(allsmall){
+      display: none;
+    }
+    .goalkeeper-line {
+      position: relative;
+    }
+    .nl-player-block {
+      position: absolute;
+      max-width: 105px;
+      text-align: center;
+      font-size: 10px;
+      text-transform: uppercase;
+      color: #fff;
+      font-weight: 600;
+      p{
+        margin: 0;
+        line-height: 15px
+      }
+      img {
+        max-width: 60px;
+      }
+      &--data{
+        background: #253046;
+        position: relative;
+        min-width: 95px;
+        padding: 2px;
+        .btn-player-close{
+          position: absolute;
+          top: -16px;
+          right: -10px;
+          background: red;
+          color: #fff;
+        }
+        .data{
+          display: flex;
+          justify-content: space-between;
+          span:first-child{
+            color: #df920b;
+          }
+        }
+      }
+
+    }
+  }
+
+
+
+
+
   .btn-primary {
     font-weight: 600;
   }
